Refactor BookDAO: Remove in-memory test data and implement live database operations with PreparedStatements