@@ -1,4 +1,4 @@
-package db;
+﻿package db;
 
 import java.sql.Connection;
 import java.sql.DriverManager;
@@ -14,42 +14,13 @@ import observer.AuditLogger;
 import observer.BookEvent;
 import observer.BookEventListener;
 
-
-
-/**
- * Data Access Object for the books table.
- *
- * ════════════════════════════════════════════════════════
- *  SWITCHING TO LIVE DATABASE — checklist:
- *
- *  1. Update the three constants below (user, password, url)
- *  2. In getAllBooks()  — swap the test block for the LIVE DB block
- *  3. In getBookById() — swap the test block for the LIVE DB block
- *  4. In searchBooks() — swap the test block for the LIVE DB block
- *  5. In insertBook()  — swap the test block for the LIVE DB block
- *  6. In updateBook()  — swap the test block for the LIVE DB block
- *  7. In deleteBook()  — swap the test block for the LIVE DB block
- *
- *  Each method has clearly marked // ── TEST DATA ── and
- *  // ── LIVE DB ── sections showing exactly what to swap.
- * ════════════════════════════════════════════════════════
- *
- * === Singleton pattern ===
- * One shared instance is created on first call to getInstance().
- * All servlets share the same DAO — no new BookDAO() anywhere.
- *
- * === Observer pattern ===
- * After every write operation the DAO notifies all registered
- * BookEventListener instances. AuditLogger is registered at startup.
- *
- * === SQL injection prevention ===
- * All queries that include user data use PreparedStatements.
- * The JDBC driver parameterises values before they reach MySQL.
- */
+// NOTE: data access object - every database operation for books goes through here
+// singleton pattern - one shared instance across all servlets
+// observer pattern - notifies AuditLogger (and any other listeners) after every write
+// all queries use PreparedStatement to prevent SQL injection
 public class BookDAO {
 
-    // ── Singleton ─────────────────────────────────────────────────────────────
-
+    // NOTE: singleton - volatile for thread safety, double-checked locking
     private static volatile BookDAO instance;
 
     public static BookDAO getInstance() {
@@ -66,8 +37,7 @@ public class BookDAO {
 
     private BookDAO() {}
 
-    // ── Observer ──────────────────────────────────────────────────────────────
-
+    // NOTE: observer - listeners are notified after every create/update/delete
     private final List<BookEventListener> listeners = new ArrayList<>();
 
     public void register(BookEventListener listener) {
@@ -78,322 +48,136 @@ public class BookDAO {
         for (BookEventListener l : listeners) l.onBookEvent(event);
     }
 
-    // ═════════════════════════════════════════════════════════════════════════
-    //  DATABASE CONNECTION — update these three values for live DB
-    // ═════════════════════════════════════════════════════════════════════════
+    // NOTE: update these three values to match your Mudfoot credentials
+    private final String user     = "YOUR_MUDFOOT_USERNAME";
+    private final String password = "YOUR_MUDFOOT_PASSWORD";
+    private final String url      = "jdbc:mysql://mudfoot.doc.stu.mmu.ac.uk:6306/" + user;
 
-    // ── STEP 1 WHEN GOING LIVE: replace these three values ───────────────────
-    String user     = "YOUR_MUDFOOT_USERNAME";
-    String password = "YOUR_MUDFOOT_PASSWORD";
-    String url      = "jdbc:mysql://mudfoot.doc.stu.mmu.ac.uk:6306/" + user;
-    // ─────────────────────────────────────────────────────────────────────────
-
-    Connection conn = null;
-    Statement  stmt = null;
-
-    private void openConnection() {
+    // NOTE: opens a fresh connection - called at the start of each method
+    private Connection openConnection() throws SQLException {
         try {
-            Class.forName("com.mysql.jdbc.Driver")
-                 .getDeclaredConstructor()
-                 .newInstance();
+            Class.forName("com.mysql.jdbc.Driver").getDeclaredConstructor().newInstance();
         } catch (Exception e) {
-            System.out.println("Driver error: " + e);
+            System.out.println("Driver load error: " + e);
         }
-        try {
-            conn = DriverManager.getConnection(url, user, password);
-            stmt = conn.createStatement();
-        } catch (SQLException se) {
-            System.out.println("Connection error: " + se);
-        }
+        return DriverManager.getConnection(url, user, password);
     }
 
-    private void closeConnection() {
-        try {
-            if (conn != null) conn.close();
-        } catch (SQLException e) {
-            e.printStackTrace();
-        }
+    // NOTE: maps a ResultSet row to a Book object
+    private Book getNextBook(ResultSet rs) throws SQLException {
+        return new Book(
+            rs.getInt("id"),
+            rs.getString("title"),
+            rs.getString("author"),
+            rs.getString("date"),
+            rs.getString("genres"),
+            rs.getString("characters"),
+            rs.getString("synopsis")
+        );
     }
 
-    private Book getNextBook(ResultSet rs) {
-        try {
-            return new Book(
-                rs.getInt   ("id"),
-                rs.getString("title"),
-                rs.getString("author"),
-                rs.getString("date"),
-                rs.getString("genres"),
-                rs.getString("characters"),
-                rs.getString("synopsis")
-            );
-        } catch (SQLException e) {
-            e.printStackTrace();
-            return null;
-        }
-    }
-
-    // ═════════════════════════════════════════════════════════════════════════
-    //  IN-MEMORY TEST STORE
-    //  Remove this entire block when switching to live DB
-    // ═════════════════════════════════════════════════════════════════════════
-
-    // ── TEST DATA: remove this block when going live ──────────────────────────
-    private final ArrayList<Book> store = new ArrayList<Book>() {{
-        add(new Book(1, "The Kite Runner",
-                     "Khaled Hosseini", "2003",
-                     "Fiction, Drama",
-                     "Amir, Hassan, Baba",
-                     "A story of friendship and redemption set in Afghanistan."));
-        add(new Book(2, "1984",
-                     "George Orwell", "1949",
-                     "Dystopian, Political Fiction",
-                     "Winston Smith, Julia, O'Brien",
-                     "A totalitarian future society under constant surveillance."));
-        add(new Book(3, "To Kill a Mockingbird",
-                     "Harper Lee", "1960",
-                     "Fiction, Legal Drama",
-                     "Scout, Atticus, Boo Radley",
-                     "Racial injustice in the American South."));
-        add(new Book(4, "Clean Code",
-                     "Robert C. Martin", "2008",
-                     "Programming",
-                     "",
-                     "Principles and practices for writing readable code."));
-        add(new Book(5, "Dune",
-                     "Frank Herbert", "1965",
-                     "Science Fiction",
-                     "Paul Atreides, Lady Jessica, Baron Harkonnen",
-                     "A desert planet holds the universe's most valuable resource."));
-    }};
-
-    private int nextId = 6;
-    // ── END TEST DATA block ───────────────────────────────────────────────────
-
-    // ═════════════════════════════════════════════════════════════════════════
-    //  CRUD METHODS
-    // ═════════════════════════════════════════════════════════════════════════
-
-    // ── GET ALL ───────────────────────────────────────────────────────────────
-
+    // NOTE: returns every row in the books table
     public ArrayList<Book> getAllBooks() {
-
-        // ── TEST DATA: returns the in-memory list ─────────────────────────────
-        return new ArrayList<>(store);
-        // ── END TEST DATA ─────────────────────────────────────────────────────
-
-        /*
-         * ── LIVE DB: uncomment this block and remove the TEST DATA line above ──
-         *
-         * ArrayList<Book> allBooks = new ArrayList<>();
-         * openConnection();
-         * try {
-         *     String sql = "SELECT * FROM books ORDER BY title";
-         *     ResultSet rs = stmt.executeQuery(sql);
-         *     while (rs.next()) allBooks.add(getNextBook(rs));
-         *     stmt.close();
-         *     closeConnection();
-         * } catch (SQLException se) {
-         *     System.out.println(se);
-         * }
-         * return allBooks;
-         *
-         * ── END LIVE DB ───────────────────────────────────────────────────────
-         */
+        ArrayList<Book> books = new ArrayList<>();
+        try (Connection conn = openConnection();
+             Statement stmt = conn.createStatement();
+             ResultSet rs = stmt.executeQuery("SELECT * FROM books")) {
+            while (rs.next()) books.add(getNextBook(rs));
+        } catch (SQLException se) {
+            System.out.println("getAllBooks error: " + se);
+        }
+        return books;
     }
 
-    // ── GET BY ID ─────────────────────────────────────────────────────────────
-
+    // NOTE: finds a single book by its primary key
     public Book getBookById(int id) {
-
-        // ── TEST DATA: searches the in-memory list ────────────────────────────
-        for (Book b : store) {
-            if (b.getId() == id) return b;
+        try (Connection conn = openConnection();
+             PreparedStatement ps = conn.prepareStatement(
+                 "SELECT * FROM books WHERE id = ?")) {
+            ps.setInt(1, id);
+            try (ResultSet rs = ps.executeQuery()) {
+                if (rs.next()) return getNextBook(rs);
+            }
+        } catch (SQLException se) {
+            System.out.println("getBookById error: " + se);
         }
         return null;
-        // ── END TEST DATA ─────────────────────────────────────────────────────
-
-        /*
-         * ── LIVE DB: uncomment this block and remove the TEST DATA block above ─
-         *
-         * openConnection();
-         * Book book = null;
-         * try {
-         *     PreparedStatement ps = conn.prepareStatement(
-         *         "SELECT * FROM books WHERE id = ?");
-         *     ps.setInt(1, id);
-         *     ResultSet rs = ps.executeQuery();
-         *     if (rs.next()) book = getNextBook(rs);
-         *     ps.close();
-         *     closeConnection();
-         * } catch (SQLException se) {
-         *     System.out.println(se);
-         * }
-         * return book;
-         *
-         * ── END LIVE DB ───────────────────────────────────────────────────────
-         */
     }
 
-    // ── SEARCH ────────────────────────────────────────────────────────────────
-
+    // NOTE: searches title, author, and genres using LIKE
+    // the search string is already sanitised by Validation.validateSearch before reaching here
     public ArrayList<Book> searchBooks(String searchStr) {
-
-        // ── TEST DATA: searches the in-memory list ────────────────────────────
         ArrayList<Book> results = new ArrayList<>();
-        String lower = searchStr.toLowerCase();
-        for (Book b : store) {
-            if (contains(b.getTitle(),      lower) ||
-                contains(b.getAuthor(),     lower) ||
-                contains(b.getGenres(),     lower)) {
-                results.add(b);
+        String pattern = "%" + searchStr + "%";
+        try (Connection conn = openConnection();
+             PreparedStatement ps = conn.prepareStatement(
+                 "SELECT * FROM books WHERE title LIKE ? OR author LIKE ? OR genres LIKE ?")) {
+            ps.setString(1, pattern);
+            ps.setString(2, pattern);
+            ps.setString(3, pattern);
+            try (ResultSet rs = ps.executeQuery()) {
+                while (rs.next()) results.add(getNextBook(rs));
             }
+        } catch (SQLException se) {
+            System.out.println("searchBooks error: " + se);
         }
         return results;
-        // ── END TEST DATA ─────────────────────────────────────────────────────
-
-        /*
-         * ── LIVE DB: uncomment this block and remove the TEST DATA block above ─
-         *
-         * ArrayList<Book> results = new ArrayList<>();
-         * openConnection();
-         * try {
-         *     PreparedStatement ps = conn.prepareStatement(
-         *         "SELECT * FROM books " +
-         *         "WHERE title LIKE ? OR author LIKE ? OR genres LIKE ? " +
-         *         "ORDER BY title");
-         *     String pattern = "%" + searchStr + "%";
-         *     ps.setString(1, pattern);
-         *     ps.setString(2, pattern);
-         *     ps.setString(3, pattern);
-         *     ResultSet rs = ps.executeQuery();
-         *     while (rs.next()) results.add(getNextBook(rs));
-         *     ps.close();
-         *     closeConnection();
-         * } catch (SQLException se) {
-         *     System.out.println(se);
-         * }
-         * return results;
-         *
-         * ── END LIVE DB ───────────────────────────────────────────────────────
-         */
     }
 
-    // ── INSERT ────────────────────────────────────────────────────────────────
-
+    // NOTE: inserts a new book row and returns the auto-generated id
     public int insertBook(Book b) throws SQLException {
-
-        // ── TEST DATA: adds to the in-memory list ─────────────────────────────
-        b.setId(nextId++);
-        store.add(b);
-        notifyListeners(new BookEvent(BookEvent.Type.CREATE, b));
-        return b.getId();
-        // ── END TEST DATA ─────────────────────────────────────────────────────
-
-        /*
-         * ── LIVE DB: uncomment this block and remove the TEST DATA block above ─
-         *
-         * openConnection();
-         * int generatedId = -1;
-         * PreparedStatement ps = conn.prepareStatement(
-         *     "INSERT INTO books " +
-         *     "(title, author, date, genres, characters, synopsis, cover) " +
-         *     "VALUES (?, ?, ?, ?, ?, ?, ?)",
-         *     Statement.RETURN_GENERATED_KEYS);
-         * ps.setString(1, b.getTitle());
-         * ps.setString(2, b.getAuthor());
-         * ps.setString(3, b.getDate());
-         * ps.setString(4, b.getGenres());
-         * ps.setString(5, b.getCharacters());
-         * ps.setString(6, b.getSynopsis());
-         * ps.setString(7, b.getCover());
-         * ps.executeUpdate();
-         * ResultSet keys = ps.getGeneratedKeys();
-         * if (keys.next()) generatedId = keys.getInt(1);
-         * ps.close();
-         * closeConnection();
-         * b.setId(generatedId);
-         * notifyListeners(new BookEvent(BookEvent.Type.CREATED, b));
-         * return generatedId;
-         *
-         * ── END LIVE DB ───────────────────────────────────────────────────────
-         */
-    }
-
-    // ── UPDATE ────────────────────────────────────────────────────────────────
-
-    public int updateBook(Book b) throws SQLException {
-
-        // ── TEST DATA: updates the in-memory list ─────────────────────────────
-        for (int i = 0; i < store.size(); i++) {
-            if (store.get(i).getId() == b.getId()) {
-                store.set(i, b);
-                notifyListeners(new BookEvent(BookEvent.Type.UPDATE, b));
-                return 1;
+        try (Connection conn = openConnection();
+             PreparedStatement ps = conn.prepareStatement(
+                 "INSERT INTO books (title, author, date, genres, characters, synopsis) " +
+                 "VALUES (?, ?, ?, ?, ?, ?)",
+                 Statement.RETURN_GENERATED_KEYS)) {
+            ps.setString(1, b.getTitle());
+            ps.setString(2, b.getAuthor());
+            ps.setString(3, b.getDate());
+            ps.setString(4, b.getGenres());
+            ps.setString(5, b.getCharacters());
+            ps.setString(6, b.getSynopsis());
+            ps.executeUpdate();
+            try (ResultSet keys = ps.getGeneratedKeys()) {
+                if (keys.next()) {
+                    int generatedId = keys.getInt(1);
+                    b.setId(generatedId);
+                    notifyListeners(new BookEvent(BookEvent.Type.CREATE, b));
+                    return generatedId;
+                }
             }
         }
-        return 0;
-        // ── END TEST DATA ─────────────────────────────────────────────────────
-
-        /*
-         * ── LIVE DB: uncomment this block and remove the TEST DATA block above ─
-         *
-         * openConnection();
-         * PreparedStatement ps = conn.prepareStatement(
-         *     "UPDATE books SET title=?, author=?, date=?, genres=?, " +
-         *     "characters=?, synopsis=?, cover=? WHERE id=?");
-         * ps.setString(1, b.getTitle());
-         * ps.setString(2, b.getAuthor());
-         * ps.setString(3, b.getDate());
-         * ps.setString(4, b.getGenres());
-         * ps.setString(5, b.getCharacters());
-         * ps.setString(6, b.getSynopsis());
-         * ps.setString(7, b.getCover());
-         * ps.setInt   (8, b.getId());
-         * int rows = ps.executeUpdate();
-         * ps.close();
-         * closeConnection();
-         * notifyListeners(new BookEvent(BookEvent.Type.UPDATED, b));
-         * return rows;
-         *
-         * ── END LIVE DB ───────────────────────────────────────────────────────
-         */
+        return -1;
     }
 
-    // ── DELETE ────────────────────────────────────────────────────────────────
-
-    public int deleteBook(Book b) throws SQLException {
-
-        // ── TEST DATA: removes from the in-memory list ────────────────────────
-        boolean removed = store.removeIf(book -> book.getId() == b.getId());
-        if (removed) {
-            notifyListeners(new BookEvent(BookEvent.Type.DELETE, b));
-            return 1;
+    // NOTE: updates all editable columns for the book matching the id
+    public int updateBook(Book b) throws SQLException {
+        try (Connection conn = openConnection();
+             PreparedStatement ps = conn.prepareStatement(
+                 "UPDATE books SET title=?, author=?, date=?, genres=?, " +
+                 "characters=?, synopsis=? WHERE id=?")) {
+            ps.setString(1, b.getTitle());
+            ps.setString(2, b.getAuthor());
+            ps.setString(3, b.getDate());
+            ps.setString(4, b.getGenres());
+            ps.setString(5, b.getCharacters());
+            ps.setString(6, b.getSynopsis());
+            ps.setInt(7, b.getId());
+            int rows = ps.executeUpdate();
+            notifyListeners(new BookEvent(BookEvent.Type.UPDATE, b));
+            return rows;
         }
-        return 0;
-        // ── END TEST DATA ─────────────────────────────────────────────────────
-
-        /*
-         * ── LIVE DB: uncomment this block and remove the TEST DATA block above ─
-         *
-         * openConnection();
-         * PreparedStatement ps = conn.prepareStatement(
-         *     "DELETE FROM books WHERE id = ?");
-         * ps.setInt(1, b.getId());
-         * int rows = ps.executeUpdate();
-         * ps.close();
-         * closeConnection();
-         * notifyListeners(new BookEvent(BookEvent.Type.DELETED, b));
-         * return rows;
-         *
-         * ── END LIVE DB ───────────────────────────────────────────────────────
-         */
     }
 
-    // ── Helper ────────────────────────────────────────────────────────────────
-
-    // ── TEST DATA only — remove this method when going live ───────────────────
-    private boolean contains(String field, String term) {
-        return field != null && field.toLowerCase().contains(term);
+    // NOTE: deletes the row with the matching id
+    public int deleteBook(Book b) throws SQLException {
+        try (Connection conn = openConnection();
+             PreparedStatement ps = conn.prepareStatement(
+                 "DELETE FROM books WHERE id = ?")) {
+            ps.setInt(1, b.getId());
+            int rows = ps.executeUpdate();
+            notifyListeners(new BookEvent(BookEvent.Type.DELETE, b));
+            return rows;
+        }
     }
-    // ── END TEST DATA ─────────────────────────────────────────────────────────
 }
